# neurowood

./: CMakeCache.txt  CMakeLists.txt  Classifier.cpp  Classifier.hpp  Classifier_builder.cpp  Classifier_builder.hpp  Ftr_extractor.cpp  Ftr_extractor.hpp  Im_processing.cpp  Im_processing.hpp  Makefile  Model.cpp  Model.hpp  Model_trainer.cpp  Model_trainer.hpp  README.md  Teste  cmake_install.cmake  haraLBP.csv  haraLBP_alterado.csv  main.cpp  test.csv  train.csv  video_cap_test.cpp
html/: _classifier_8hpp_source.html  _classifier__builder_8hpp_source.html  _ftr__extractor_8hpp_source.html  _im__processing_8hpp_source.html  _model_8hpp_source.html  _model__trainer_8hpp_source.html  annotated.html  class_classifier-members.html  class_classifier.html  class_classifier__builder-members.html  class_classifier__builder.html  class_color__filter-members.html  class_color__filter.html  class_crop__image-members.html  class_crop__image.html  class_ftr__extractor-members.html  class_ftr__extractor.html  class_haralick__extractor-members.html  class_haralick__extractor.html  class_im__processing-members.html  class_im__processing.html  class_k_n_n___model-members.html  class_k_n_n___model.html  class_k_n_n__trainer-members.html  class_k_n_n__trainer.html  class_l_b_p__extractor-members.html  class_l_b_p__extractor.html  class_m_l_p___model-members.html  class_m_l_p___model.html  class_m_l_p__trainer-members.html  class_m_l_p__trainer.html  class_model-members.html  class_model.html  class_model__trainer-members.html  class_model__trainer.html  class_noise__filter-members.html  (+19 more)
(+207 files in other folders)
